--- a/po-css.css
+++ b/po-css.css
@@ -177,7 +177,17 @@
         z-index: 1000; /* 다른 요소 위에 표시 */
         /* 추가 스타일 설정 */
     }
-    
+    section .userContainer {   display: flex!important;
+        position: fixed;
+        bottom: -100%; /* 초기 상태에서는 화면 밖에 위치하도록 설정 */
+        left: 0;
+        width: 100%;
+        background-color: white;
+        transition: bottom 0.5s ease-in-out; /* 부드러운 전환 효과 */
+        z-index: 1000; /* 다른 요소 위에 표시 */
+        /* 추가 스타일 설정 */}
+        section .userContainer.active {   bottom: 45px;}
+            
     aside .userInfo.active {
         bottom: 45px;
     }
